# fontconfig-check

./: .gitattributes  CMakeLists.txt  README.md  run.sh
example/: CMakeLists.txt
example/attributes/: CMakeLists.txt  main.cpp
example/familiy/: CMakeLists.txt  main.cpp
example/module/: CMakeLists.txt  main.cpp
include/: fontconfig_check.h  logger.h
modules/: CMakeLists.txt
modules/image_generation/: CMakeLists.txt
modules/image_generation/include/: image_generation_module.h
modules/image_generation/src/: image_generation_module.cpp
modules/xterminal_font/: CMakeLists.txt
modules/xterminal_font/include/: xterminal_font_module.h
modules/xterminal_font/src/: xterminal_font_module.cpp
src/: fontconfig_check.cpp
